--- a/flask_tools/openweather/Dockerfile
+++ b/flask_tools/openweather/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.13-slim
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-RUN apt-get update && apt-get install -y curl && rm -rf /vars/libs/apt/list/*
+RUN apt-get update && apt-get install -y curl && rm -rf /vars/lib/apt/list/*
 RUN pip install --upgrade pip && pip install flask
 
 COPY . .
