--- a/flask_tools/translator/Dockerfile
+++ b/flask_tools/translator/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 
 
-RUN pip install --upgrade pip && pip install flask && pip install deep_translator
+COPY requirements.txt .
 
 
 RUN pip install --upgrade pip && pip install -r requirements.txt
