add a new mount,delete zip and update table creation loop

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,6 +58,7 @@ services:
         condition: service_started
     volumes:
         - ./state : /app/state
+        - ./logs : /app/logs
     env_file:
       - .env
     
