generate go.sum inside work-dir

--- a/Toxiproxy/Dockerfile
+++ b/Toxiproxy/Dockerfile
@@ -6,10 +6,8 @@ RUN apk add gcc musl-dev
 
 
 WORKDIR /app
-
-
 COPY go.mod .
-RUN go mod download
+RUN go mod tidy && go mod download
 
 COPY . .
 
