fix env var issue in docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,36 +4,51 @@ services:
   search_tool:
     build: ./flask_tools/serp
     environment:
-      - ERROR_PROB=${ERROR_PROB}
+      ERROR_PROB: ${ERROR_PROB}
+    env_file:
+      - .env
   weather_tool:
     build: ./flask_tools/openweather
     environment:
-      - ERROR_PROB=${ERROR_PROB}
+      ERROR_PROB: ${ERROR_PROB}
+    env_file:
+      - .env
+    
   
   movie_tool:
     build: ./flask_tools/tmdb
     environment:
-      - ERROR_PROB=${ERROR_PROB}
+      ERROR_PROB: ${ERROR_PROB}
+    env_file:
+      - .env
   
   calendar_tool:
     build: ./flask_tools/calendar
     environment:
-      - ERROR_PROB=${ERROR_PROB} 
+      ERROR_PROB: ${ERROR_PROB} 
+    env_file:
+      - .env
   
   calculator_tool:
     build: ./flask_tools/calculator
     environment:
-      - ERROR_PROB=${ERROR_PROB}
+      ERROR_PROB: ${ERROR_PROB}
+    env_file:
+      - .env
     
   message_tool:
     build: ./flask_tools/message
     environment:
-      - ERROR_PROB=${ERROR_PROB}
+      ERROR_PROB: ${ERROR_PROB}
+    env_file:
+      - .env
   
   translator_tool:
     build: ./flask_tools/translator
     environment:
-      - ERROR_PROB=${ERROR_PROB}
+      ERROR_PROB: ${ERROR_PROB}
+    env_file:
+      - .env
   proxy_mgr:
     build: ./Toxiproxy
     volumes:
@@ -63,10 +78,10 @@ services:
     volumes:
         - ./state:/app/state
         - ./logs:/app/logs
-    env_file:
-      - .env 
     environment:
-      -TOXIC_PROB=${TOXIC_PROB}
+      TOXIC_PROB: ${TOXIC_PROB}
+    env_file:
+      - .env
     
 
   
