--- a/Toxiproxy/Dockerfile
+++ b/Toxiproxy/Dockerfile
@@ -11,9 +11,12 @@ WORKDIR /app
 COPY go.mod .
 RUN go mod download
 
+
 COPY . .
 
-
 RUN go build -o proxy_manager .
+
+HEALTHCHECK --interval=30s --retries=3 --timeout=5s \
+CMD wget --no-verbose --tries=1 --spider http://localhost:8000/health || exit 1
 
 CMD ["./proxy_manager"]
